--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,26 +2,29 @@
     <md-card class="login-card">
         <md-toolbar color="primary">Login</md-toolbar>
         <md-progress-bar mode="indeterminate" color="primary" *ngIf="submitted"></md-progress-bar>
-        <form [formGroup]="loginForm"  (ngSubmit)="submit()" >
+        <form [formGroup]="loginForm" (ngSubmit)="submit()">
             <md-card-content>
-                <md-input [attr.dividerColor]="loginForm.controls.email.valid ? 'primary' : 'warn'" style="width: 100%;" formControlName="email" placeholder="Email" type="email">
-                    <md-hint [hidden]="loginForm.controls.email.valid || (loginForm.controls.email.pristine && !submitted)" align="start">
-                        This field is required!
-                    </md-hint>
-                </md-input>
-                <md-input style="width: 100%;" formControlName="password" type="password" placeholder="Password"> 
-                    <md-hint [hidden]="loginForm.controls.password.valid || (loginForm.controls.password.pristine && !submitted)" align="start">
-                        This field is required!
-                    </md-hint>
-                </md-input>
+                <md-input-container>
+                    <input mdInput [attr.dividerColor]="loginForm.controls.email.valid ? 'primary' : 'warn'" formControlName="email" placeholder="Email"
+                        type="email" />
+                </md-input-container>
+                <md-hint [hidden]="loginForm.controls.email.valid || (loginForm.controls.email.pristine && !submitted)" align="start">
+                    This field is required!
+                </md-hint>
+                <md-input-container>
+                    <input mdInput formControlName="password" type="password" placeholder="Password"/>
+                </md-input-container>
+                <md-hint [hidden]="loginForm.controls.password.valid || (loginForm.controls.password.pristine && !submitted)" align="start">
+                    This field is required!
+                </md-hint>
                 <p color="warn" *ngIf="showWarning">{{warningMessage}}</p>
             </md-card-content>
             <div class="buttons-container">
                 <div class="buttons-holder">
-                    <button md-raised-button type="submit" color="primary" >Login</button>
+                    <button md-raised-button type="submit" color="primary">Login</button>
                 </div>
             </div>
         </form>
-        
+
     </md-card>
 </div>
