--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -6,12 +6,16 @@
       <table >
         <tr>
           <td>
-            <md-input style="width:50%" placeholder="Assunto" ></md-input>
+            <md-input-container>
+              <input mdInput placeholder="Assunto"/>
+            </md-input-container>
           </td>
         </tr>
         <tr>
           <td>
-            <md-input style="width:100%"  placeholder="Descrição" ></md-input>
+            <md-input-container>
+              <input mdInput  placeholder="Descrição"/>
+            </md-input-container>
           </td>
         </tr>
       </table>
