--- a/src/app/disciplines/classes/form/form-classes.component.html
+++ b/src/app/disciplines/classes/form/form-classes.component.html
@@ -7,24 +7,36 @@
             <table style="width: 100%" cellspacing="0">
                 <tr>
                     <td colspan="10">
-                        <md-input formControlName="classT.name" placeholder="Nome da Turma" style="width: 100%"></md-input>
+                        <md-input-container>
+                            <input mdInput formControlName="classT.name" placeholder="Nome da Turma" />
+                        </md-input-container>
                     </td>
                 </tr>
                 <tr *ngIf="discipline!=='inst'">
                     <td colspan="2">
-                        <md-input formControlName="schedule.hourInit" style="width: 95%" placeholder="Hora de Inicio"></md-input>
+                        <md-input-container>
+                            <input mdInput formControlName="schedule.hourInit" placeholder="Hora de Inicio"/>
+                        </md-input-container>
                     </td>
                     <td colspan="2">
-                        <md-input formControlName="schedule.minsInit" style="width: 95%" placeholder="Minutos de Inicio"></md-input>
+                        <md-input-container>
+                            <input mdInput formControlName="schedule.minsInit" placeholder="Minutos de Inicio"/>
+                        </md-input-container>
                     </td>
                     <td colspan="2">
-                        <md-input formControlName="schedule.hourFinit" style="width: 95%" placeholder="Hora de Fim"></md-input>
+                        <md-input-container>
+                            <input mdInput formControlName="schedule.hourFinit" placeholder="Hora de Fim"/>
+                        </md-input-container>
                     </td>
                     <td colspan="2">
-                        <md-input formControlName="schedule.minsFinit" style="width: 95%" placeholder="Minutos de Fim"></md-input>
+                        <md-input-container>
+                            <input mdInput formControlName="schedule.minsFinit" placeholder="Minutos de Fim"/>
+                        </md-input-container>
                     </td>
                     <td colspan="2">
-                        <md-input formControlName="schedule.weekDay" style="width: 100%" placeholder="Dia da Semana"></md-input>
+                        <md-input-container>
+                            <input mdInput formControlName="schedule.weekDay"  placeholder="Dia da Semana"/>
+                        </md-input-container>
                     </td>
                 </tr>
             </table>
@@ -35,7 +47,9 @@
         <md-toolbar color="primary">Professores
             <div class="searchbar">
                 <md-icon style="margin-bottom:10px; margin-right:5px;" class="md-32" >search</md-icon>
-                <md-input #input (keyup)="searchProfessor(input.value)" placeholder="Pesquisa" ></md-input>
+                <md-input-container>
+                    <input mdInput  #input (keyup)="searchProfessor(input.value)" placeholder="Pesquisa" />
+                </md-input-container>
             </div>
         </md-toolbar>
         <md-card-content>
@@ -61,7 +75,9 @@
         <md-toolbar color="primary">Alunos
             <div class="searchbar">
                 <md-icon style="margin-bottom:10px; margin-right:5px;" class="md-32" >search</md-icon>
-                <md-input #input (keyup)="searchStudent(input.value)" placeholder="Pesquisa"></md-input>
+                <md-input-container>
+                    <input mdInput #input (keyup)="searchStudent(input.value)" placeholder="Pesquisa"/>
+                </md-input-container>
             </div>
         </md-toolbar>
          <md-card-content>
